--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,5 +8,5 @@ Maintainer: Yixuan Qiu <yixuan.qiu@cos.name>
 Description: Enhancement of the fda package
 License: GPL (>= 2)
 Depends: methods
-Imports: Rcpp (>= 0.11.0)
+Imports: splines, Rcpp (>= 0.11.0)
 LinkingTo: Rcpp, RcppEigen
