fd_new() to create fd+ object

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,4 +13,4 @@ exportMethods("[", "*", feval, plot, "%*%", penmat, mean, sd, var)
 exportClasses("basis+", "bspline+")
 exportClasses("fd+")
 
-export(basis_bs)
+export(basis_bs, fd_new)
