--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,8 @@ S3method(c, "fd+")
 
 importFrom(graphics, plot)
 importFrom(stats, sd, var)
-exportMethods("[", "*", "/", feval, plot, "%*%", penmat, mean, sd, var)
+exportMethods("[", "+", "-", "*", "/", feval, plot,
+              "%*%", penmat, mean, sd, var)
 
 exportClasses("basis+", "bspline+")
 exportClasses("fd+")
